--- a/react-helloworld-mui5-tryout/package.json
+++ b/react-helloworld-mui5-tryout/package.json
@@ -51,6 +51,8 @@
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
+    "gulp": "^4.0.2",
+    "gulp-run-command": "^0.0.10",
     "prettier": "^2.6.2"
   }
 }
